--- a/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
+++ b/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
@@ -1,16 +1,17 @@
 <mat-toolbar [ngClass]="{'scrolled': !isTransparentRoute || isScrolled  }">
   <span routerLink="/"><img id="logo" src="assets/images/logo.png" alt=""></span>
   <span class="spacer"></span>
-  <a routerLink="/" mat-button>Home</a>
+  <a routerLink="/" mat-button *ngIf="role!=='SYSADMIN'">Home</a>
   <app-navigation-admin *ngIf="role==='ADMIN'"></app-navigation-admin>
   <app-navigation-guest *ngIf="role==='GUEST'"></app-navigation-guest>
   <app-navigation-owner *ngIf="role==='OWNER'"></app-navigation-owner>
-  <a routerLink="account" mat-button *ngIf="role!==''" class="account">
+  <a routerLink="account" mat-button *ngIf="role==='GUEST'||role==='OWNER'||role==='ADMIN'" class="account">
     Account
     <mat-icon *ngIf="role==='GUEST'||role==='OWNER'" matBadge="{{notificationNumber}}" fontIcon="notifications_active"></mat-icon>
   </a>
-  <div id="account-icon-holder" *ngIf="role!==''">
-    <img alt="" id="account-icon" [src]="userImage"/>
+  <div id="account-icon-holder" *ngIf="role==='GUEST'||role==='OWNER'||role==='ADMIN'">
+    <img  alt="" id="account-icon" [src]="userImage"/>
   </div>
   <a routerLink="login" mat-button id="login_btn" *ngIf="role===''">Login</a>
+  <a mat-button id="logout_btn" *ngIf="role==='SYSADMIN'" (click)="OnLogoutClick()">Logout</a>
 </mat-toolbar>
