--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
@@ -9,8 +9,8 @@
         <mat-tree [dataSource]="dataSource1" [treeControl]="treeControl">
           <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
             <button mat-icon-button disabled></button>
-            {{node.name}}
-            <span class="material-symbols-outlined child">add_box</span>
+            {{node.name.certificate.subject.name}}
+            <span class="material-symbols-outlined child" *ngIf="extensionsContainsCA(node.name)" (click)="createCertificate(node.name)">add_box</span>
           </mat-tree-node>
           <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
             <button mat-icon-button matTreeNodeToggle
@@ -19,8 +19,8 @@
                 {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
               </mat-icon>
             </button>
-            {{node.name}}
-            <span class="material-symbols-outlined child">add_box</span>
+            {{node.name.certificate.subject.name}}
+            <span class="material-symbols-outlined child" (click)="createCertificate(node.name)">add_box</span>
           </mat-tree-node>
         </mat-tree>
         <div id = "fake">
