fix getting root alias

--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/form-dialog/form-dialog.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/form-dialog/form-dialog.component.html
@@ -77,7 +77,7 @@
     <button mat-button id="submit" (click)="onSubmitClick()">Submit</button>
   </div>
   <ngx-spinner name="create-spinner" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > Creating Certificate... </p></ngx-spinner>
-  <ngx-spinner name="fail-spinner" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#f83333" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > FAILED... </p></ngx-spinner>
-  <ngx-spinner name="success-spinner" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#2bcc56" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > SUCCESS... </p></ngx-spinner>
+  <ngx-spinner name="fail-spinner" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#f83333" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > Failed... </p></ngx-spinner>
+  <ngx-spinner name="success-spinner" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#2bcc56" type = "ball-scale-multiple" [fullScreen] = "false"><p style="color: white" > Success... </p></ngx-spinner>
 
 </div>
