--- a/Bookify-client/Bookify/src/app/feature-modules/account/account/account.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/account/account/account.component.html
@@ -1,5 +1,6 @@
 <div id="account-page">
   <app-user-information></app-user-information>
+  <app-certificate-request *ngIf="role==='OWNER'"></app-certificate-request>
   <app-notification-settings></app-notification-settings>
   <app-notifications></app-notifications>
   <app-comments-ratings *ngIf="role==='OWNER'"></app-comments-ratings>
