--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
@@ -42,6 +42,13 @@
             <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
 
+          <ng-container matColumnDef="app">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by app name">
+              App name
+            </th>
+            <td mat-cell *matCellDef="let element"> {{element.app}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef> Email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
