button for revocation

--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/details-dialog/details-dialog.component.css
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/details-dialog/details-dialog.component.css
@@ -21,6 +21,11 @@ mat-form-field {
     justify-content: center;
 }
 
+.revoke {
+  background-color: #1c2a3a;
+  color: whitesmoke;
+}
+
 .center-data {
     display: flex;
     justify-content: center;
