--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/details-dialog/details-dialog.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/details-dialog/details-dialog.component.html
@@ -38,6 +38,7 @@
   </div>
   <div mat-dialog-actions class="dialog-actions">
     <button mat-button (click)="onCancelClick()">Cancel</button>
-    <button mat-button class="revoke" (click)="revokeClick()">Revoke</button>
+    <button mat-button class="revoke" (click)="revokeClick()" *ngIf="!isRevoked">Revoke</button>
+    <button mat-button class="revoke" (click)="restoreClick()" *ngIf="isRevoked">Restore</button>
   </div>
 </div>
