--- a/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/sysadmin/certificate-manager/certificate-manager.component.html
@@ -13,7 +13,7 @@
               {{node.name.certificate.subject.name}}
             </span>
             <span class="material-symbols-outlined invalid" *ngIf="!validateMap[node.name.certificate.subjectCertificateAlias]">warning</span>
-            <span class="material-symbols-outlined child" *ngIf="extensionsContainsCA(node.name)" (click)="createCertificate(node.name)">add_box</span>
+            <span class="material-symbols-outlined child" *ngIf="extensionsContainsCA(node.name) && validateMap[node.name.certificate.subjectCertificateAlias]" (click)="createCertificate(node.name)">add_box</span>
           </mat-tree-node>
           <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding matTreeNodePaddingIndent="25">
             <button mat-icon-button matTreeNodeToggle
@@ -27,7 +27,7 @@
             </span>
             <span class="material-symbols-outlined invalid" *ngIf="!validateMap[node.name.certificate.subjectCertificateAlias]">warning</span>
 
-            <span class="material-symbols-outlined child" (click)="createCertificate(node.name)">add_box</span>
+            <span class="material-symbols-outlined child" *ngIf="validateMap[node.name.certificate.subjectCertificateAlias]" (click)="createCertificate(node.name)">add_box</span>
           </mat-tree-node>
         </mat-tree>
         <div id = "fake">
