--- a/Bookify-client/Bookify/src/app/feature-modules/authentication/login/login.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/authentication/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login-container">
+<!-- <div class="login-container">
     <div class="login-login">
         <div class="background">
             <img src="../../../../assets/images/background-image.png" alt="image255165" class="background-image" />
@@ -34,4 +34,4 @@
             </div>
         </form>
     </div>
-</div>
+</div> -->
