--- a/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
+++ b/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
@@ -12,6 +12,6 @@
   <div id="account-icon-holder" *ngIf="role==='GUEST'||role==='OWNER'||role==='ADMIN'">
     <img  alt="" id="account-icon" [src]="userImage"/>
   </div>
-  <a routerLink="login" mat-button id="login_btn" *ngIf="role===''">Login</a>
+  <a (click)="OnLoginClick()" mat-button id="login_btn" *ngIf="role===''">Login</a>
   <a mat-button id="logout_btn" *ngIf="role==='SYSADMIN'" (click)="OnLogoutClick()">Logout</a>
 </mat-toolbar>
