--- a/Bookify-client/Bookify/src/app/feature-modules/account/user-information/user-information.component.html
+++ b/Bookify-client/Bookify/src/app/feature-modules/account/user-information/user-information.component.html
@@ -25,8 +25,8 @@
           </div>
         </form>
         <div class="button-holder">
-          <button mat-button (click)="OnPasswordChangeClick()">CHANGE PASSWORD</button>
-          <button mat-button (click)="OnDeleteAccountClick()" >DELETE ACCOUNT</button>
+          <!-- <button mat-button (click)="OnPasswordChangeClick()">CHANGE PASSWORD</button> -->
+          <!-- <button mat-button (click)="OnDeleteAccountClick()" >DELETE ACCOUNT</button> -->
         </div>
       </div>
     </div>
