--- a/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
+++ b/Bookify-client/Bookify/src/app/layout/navigation-bar/navigation-bar.component.html
@@ -3,6 +3,7 @@
   <span class="spacer"></span>
   <a routerLink="/" mat-button *ngIf="role!=='SYSADMIN'">Home</a>
   <app-navigation-admin *ngIf="role==='ADMIN'"></app-navigation-admin>
+  <app-navigation-sysadmin *ngIf="role==='SYSADMIN'"></app-navigation-sysadmin>
   <app-navigation-guest *ngIf="role==='GUEST'"></app-navigation-guest>
   <app-navigation-owner *ngIf="role==='OWNER'"></app-navigation-owner>
   <a routerLink="account" mat-button *ngIf="role==='GUEST'||role==='OWNER'||role==='ADMIN'" class="account">
